stDemoOne/force-app/main/default/objects/Bot_Feedback__c/Bot_Feedback__c.object-meta.xml
<CustomObject>
    <label>Bot Feedback</label>
    <nameField>
        <displayFormat>BF-{0000}</displayFormat>
        <label>Bot Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>