stDemoOne/force-app/main/default/objects/Bot_Feedback__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Determines the channel the bot conversation took place on.
By default only Chat is included, update this for new channels as you add the bot to them.</description>
    <inlineHelpText>The channel the bot conversation took place on.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>