stDemoOne/force-app/main/default/objects/Bot_Feedback__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Chat that this bot survey is related to</description>
    <inlineHelpText>Chat that this bot survey is related to</inlineHelpText>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>Bot Feedback</relationshipLabel>
    <relationshipName>Bot_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>