stDemoOne/force-app/main/default/objects/Bot_Feedback__c/fields/Survey_Comment__c.field-meta.xml
<CustomField>
    <fullName>Survey_Comment__c</fullName>
    <description>Comments relating to their choice of positive or negative for the bot session</description>
    <inlineHelpText>Comments relating to their choice of positive or negative for the bot session</inlineHelpText>
    <label>Survey Comment</label>
    <type>TextArea</type>
</CustomField>