stDemoOne/force-app/main/default/objects/Bot_Feedback__c/fields/Survey_Positive__c.field-meta.xml
<CustomField>
    <fullName>Survey_Positive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this a positive interaction or not?</description>
    <inlineHelpText>Was this a positive interaction or not? True for positive, False for negative/neutral</inlineHelpText>
    <label>Survey Positive</label>
    <type>Checkbox</type>
</CustomField>