stDemoOne/force-app/main/default/objects/Bot_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Channel__c</columns>
    <columns>Survey_Positive__c</columns>
    <columns>Survey_Comment__c</columns>
    <columns>Chat_Transcript__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>